<resources>
 	<string name="error_get_user_id">请先登录</string>
    <string name="app_name">刘太太.生活</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading_text">正在加载,请稍候!</string>
    <string name="loading_fail">加载数据异常,请重试~~</string>
    <string name="loading_fail_network">网络不给力,请重新设置~~</string>
    <string name="loading_fail_server">获取数据失败,请刷新看看~~</string>
    <string name="loading_fail_nodata">目前暂无数据</string>
    <string name="home_shopcar_tab">预约</string>
     <string name="shopcar">购物车</string>
    <string name="home_tab">首页</string>
    <string name="home_mall_tab">订单篮</string>
    <string name="error_cacel_wx_pay">您已经取消付款</string>
    <string name="error_wx_pay">付款失败</string>
    <string name="error_wx_pay_send">无法发送，付款失败</string>
    <string name="error_wx_pay_get_right"> 授权失败</string>
    <string name="error_wx_pay_no_support">微信未安装或者不支持</string>
    <string name="pro_sale_tab">销量</string>
    <string name="pro_price_tab">价格</string>
    <string name="pro_shelves_tab">上架时间</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="select_city_title_text">选择城市</string>
    <string name="search_city_hint_text">请输入城市中文名或者拼音</string>
    <string name="select_city_location">定位当前城市</string>
    <string name="select_city_location_ing">定位中...</string>
    <string name="select_city_location_disable">对不起，这个城市还没有开通服务</string>
    <string name="home_pcenter_tab">我的</string>
    <string name="editable_all">编辑全部</string>
    <string name="editable_txt">编辑</string>
    <string name="finish">完成</string>
    <string name="taking_order_txt">下单</string>
    <string name="sale_prefix_text">成交量%1$s笔</string>
    <string name="sale_prefix_text2">%1$s人已买</string>
    <string name="tuangou_title_txt">团购</string>
    <string name="login_notice">亲~请先登录哦</string>
    <string name="empty_notice">亲~你的购物车为空</string>
    <string name="welcome_shop">去逛逛</string>
    <string name="commit_order">提交订单</string>
    <string name="collect_text">收藏</string>
    <string name="collect_no_content">当前您还没有收藏~</string>
    <string name="double_back_exit_ap">再按一次退出程序</string>
    <string name="alipay_fail_promt">付款失败，请再次尝试付款!</string>
    <string name="unknown_error">Unknown error</string>
    <string name="category_title">订单篮</string>
    <string name="product_shop_del_confirm_message">确认从购物车中移除？</string>
    <string name="confirm">确定</string>
    <string name="confirm_order">确认订单</string>
    <string name="order_commit_title">提交订单</string>
    <string name="order_commit_message">订单提交中，请稍等&#8230;&#8230;&#8230;</string>
    <string name="order_delete_title">删除订单</string>
    <string name="order_delete_message">订单删除中，请稍等&#8230;&#8230;&#8230;</string>
    <string name="order_confirm_delete_message">确定要删除订单？</string>
    <string name="alipay_success_promt">付款成功！</string>
    <string name="alipay_cancel_promt">你已经取消付款</string>
    <string name="search_hint_text">快速搜索商品</string>
     <string name="clear_search_history">清除搜索历史</string>
    <string name="no_search_data">没有搜索到你想要的商品</string>
    <string name="welcome_text">登录 / 注册</string>
    <string name="welcome_login">登录</string>
    <string name="welcome_reg">注册</string>
    <string name="pcenter_voucher">我的现金券</string>
    <string name="pcenter_collect">我的收藏</string>
    <string name="pcenter_balance">我的余额</string>
    <string name="pcenter_address">我的收货地址</string>
    <string name="pcenter_apply">申请成为技师</string>
    <string name="pcenter_service">我的服务</string>
    <string name="pcenter_help">帮助中心</string>
    <string name="pcenter_about">关于我们</string>
    <string name="pcenter_suggest">意见反馈</string>
    <string name="version_update">版本更新</string>
    <string name="setting_title">设置</string>
    <string name="pcenter_title">个人中心</string>
    <string name="pcenter_share">分享刘太太生活</string>
    <string name="pcenter_services">服务说明</string>
    <string name="pcenter_user">用户协议</string>
    <string name="login_text">账号</string>
    <string name="login_text2">密码</string>
    <string name="login_text1">密码&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="login_hint">请输入密码</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_reg">快速注册</string>
    <string name="register_text">+86 &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="register_text1">验证码 &#160;&#160;&#160;</string>
    <string name="register_text2">确认密码</string>
    <string name="register_text3">已阅读并同意隐私政策和用户协议</string>
    <string name="register_hint">请输入验证码</string>
    <string name="register_hint2">请输入手机号</string>
    <string name="register_code">发送验证码</string>
    <string name="register_resend">重新获取</string>
    <string name="register_error">注册失败！</string>
    <string name="register_success">注册成功！</string>
    <string name="login_error">登录失败！</string>
    <string name="login_success">登录成功！</string>
    <string name="input_error">填写为空，请重新填写！</string>
    <string name="area_error">所在地为空，请选择地址！</string>
    <string name="phone_error">请输入正确的手机号码！</string>
    <string name="map_error">请点击选择地址按钮并在地图中搜索地址</string>
    <string name="register_pass_error">请输入6-12位密码！</string>
    <string name="register_code_error">您输入的验证码有误，请重新输入！</string>
    <string name="register_repass_error">您输入的密码和确认密码不一致，请重新输入！</string>
    <string name="register_email_hint">请输入邮箱</string>
    <string name="login_email_hint">请输入用户名/手机号码</string>
    <string name="register_email_hint1">请输入用户名</string>
    <string name="login_phone_hint">请输入您的手机号码</string>
    <string name="login_pass_hint">请输入6-12位密码</string>
    <string name="find_code_hint">请输入手机验证码</string>
    <string name="find_code_text">获取验证码</string>
    <string name="addcode_resend">&#160; 重新发送&#160;</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_no_more_data">无更多数据</string>
    <string name="market_price">市场价:￥%1$s</string>
    <string name="group_price">团购价:￥%1$s</string>
    <string name="suggest_hint">您的每条意见和建议都是我们成长的动力！</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_order_success">您需支付:￥%1$s</string>
    <string name="submit_fail">提交失败</string>
    <string name="suggest_text">QQ/邮箱/手机号</string>
    <string name="suggest_text1">您还可以通过以下途径反馈给我们</string>
    <string name="suggest_text2">官方Q&#032;Q&#032;号</string>
    <string name="suggest_text3">复制Q&#032;Q&#032;号</string>
    <string name="suggest_text4">官方微信号</string>
    <string name="suggest_text5">复制微信号</string>
    <string name="collect_price">￥%1$s</string>
    <string name="empty_collect">亲，你还没有收藏任何商品哦</string>
    <string name="empty_browser">亲，你还没有浏览任何商品哦</string>
    <string name="order_all">全部&#032;&#032;</string>
    <string name="order_paying">未付款</string>
    <string name="order_delivery">未发货</string>
    <string name="order_deliveryed">已发货</string>
    <string name="order_rate">待评价</string>
    <string name="order_sn">订单号：%1$s</string>
    <string name="order_price">订单总价：</string>
    <string name="order_time">下单时间：%1$s</string>
    <string name="order_delete">删除订单</string>
    <string name="state_paying">等待付款</string>
    <string name="state_rate">评论晒单</string>
    <string name="state_delivery">等待发货</string>
    <string name="state_deliveryed">已发货</string>
    <string name="state_finish">已完成</string>
    <string name="order_detail_num">货号：%1$s</string>
    <string name="order_detail_price">价格：%1$s</string>
    <string name="order_detail_price_total">总价：%1$s</string>
    <string name="order_detail_free">运费</string>
    <string name="order_detail_pay">实付款：￥%1$s</string>
    <string name="order_detail_note">备注：</string>
    <string name="order_pay_text">亲~暂时没有待接单的订单</string>
    <string name="order_all_text">亲~暂时没有订单</string>
    <string name="order_delivery_text">亲~暂时没有待服务的订单</string>
    <string name="order_deliveryed_text">亲~暂时没有进行中的订单</string>
    <string name="rate_no_text">当前还没有用户为您的服务评论~</string>
    <string name="button_pay">去支付</string>
    <string name="button_deliveryed">查看物流</string>
    <string name="check_comment">查看评价</string>
    <string name="button_rate">去评价</string>
    <string name="button_cancel">取消订单</string>
    <string name="detail_text">支付方式</string>
    <string name="detail_text1">支付宝支付</string>
    <string name="pay_prompt">请选择下列支付方式</string>
    <string name="order_song_prompt">请及时关注订单的状态</string>
    <string name="pay_now">立即支付</string>
    <string name="order_status_title">订单状态</string>
    <string name="order_pay_title">在线下单</string>
    <string name="detail_text2">商品金额</string>
    <string name="detail_text3">实付款：</string>
    <string name="unknown">未知</string>
    <string name="order_detail_title">订单信息</string>
    <string name="order_go_detail">知道了</string>
    <string name="order_finish_txt">订单支付成功！</string>
    <string name="log_title">订单跟踪</string>
    <string name="log_text">货运方式：%1$s</string>
    <string name="log_text1">承运人：%1$s</string>
    <string name="log_text2">暂无物流信息</string>
    <string name="add_title">新增收货地址</string>
    <string name="add_change_title">收货地址编辑</string>
    <string name="name_hint">输入收件人姓名</string>
    <string name="phone_hint">输入收件人联系电话</string>
    <string name="area_hint">所在地</string>
    <string name="address_hint">输入详细地址</string>
    <string name="zipcode_hint">输入邮编</string>
    <string name="default_text">设置为默认地址</string>
    <string name="change_title">修改地址</string>
    <string name="save">保存</string>
    <string name="change">修改</string>
    <string name="address_title">收货地址</string>
    <string name="address_name">%1$s</string>
    <string name="address_address">收货地址 ：%1$s</string>
    <string name="address_edit">编辑</string>
    <string name="address_delete">删除</string>
    <string name="address_no_content">您当前没有添加地址，请新增收货地址~</string>
    <string name="address_success">添加地址成功~</string>
	<string name="forget_text">我们将发送验证码到您注册的手机号，请注意查收。</string>
	<string name="forget_phone">注册手机号：%1$s</string>
	<string name="forget_code">验证码</string>
	<string name="forget_code_btn">发送验证码</string>
	<string name="forget_next">下一步</string>
	<string name="balance_text1">￥%1$s</string>
	<string name="balance_text2">元&#160;&#160;充值卡</string>
	<string name="balance_text3">充%1$s&#160;&#160;送%1$s</string>
	<string name="balance_text4">有效期%1$s</string>
	<string name="balance_text5">立即\n充值</string>
	<string name="balance_no_content">暂无充值卡，敬请期待~</string>
    <string name="order_service_text">服务时间：%1$s</string>
    <string name="order_service_state">待支付</string>
    <string name="service_detail_text">预约编号：%1$s</string>
    <string name="service_detail_text1">预约时间：%1$s</string>
    <string name="service_detail_text2">姓名：%1$s</string>
    <string name="service_detail_text3">联系方式：%1$s</string>
    <string name="service_detail_text4">上门地址：%1$s</string>
    <string name="service_detail_text5">￥%1$s/次</string>
    <string name="service_detail_text6">使用代金券</string>
    <string name="service_detail_text7">￥ -%1$s</string>
    <string name="service_detail_text8">共计（%1$s）</string>
    <string name="service_detail_text9">￥%1$s</string>
    <string name="life_helper_image_photo">相册</string>
    <string name="life_helper_camera_photo">拍照</string>
	<string name="dialog_tech_finish_text">完成服务需要上传作品图片</string>
</resources>