<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/login_bg"
    android:orientation="vertical"
    >
    <include 
        layout="@layout/fragment_header"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/app_text_size_first"
        android:padding="10dp"
        />
    <TextView 
        android:id="@+id/first_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_phone"
        android:textColor="@android:color/black"
        android:textSize="@dimen/app_text_size_first"
        android:padding="10dp"
        />
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:id="@+id/first_code"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/forget_code_btn"
        	android:layout_alignParentRight="true"
            />
        <TextView 
            android:id="@+id/first_code_text"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/forget_code"
            />
        <EditText 
            android:id="@+id/first_code_et"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:inputType="phone"
        	android:background="@null"
        	android:layout_toLeftOf="@id/first_code"
        	android:layout_toRightOf="@id/first_code_text"
            />
    </RelativeLayout>
    <Button 
        android:id="@+id/first_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_next"
        android:layout_margin="@dimen/px_15"
        />
</LinearLayout>
