<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <Button 
        android:id="@+id/ibalance_btn"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/balance_text5"
    	android:textColor="@android:color/white"
    	android:textSize="@dimen/app_text_size_best"
    	android:layout_alignParentRight="true"
    	android:gravity="center"
        />
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_toLeftOf="@id/ibalance_btn"
    	android:layout_alignBottom="@id/ibalance_btn"
    	android:layout_alignTop="@id/ibalance_btn"
    	android:paddingTop="@dimen/px_15"
    	android:paddingLeft="@dimen/px_25"
    	android:paddingRight="@dimen/px_25"
    	android:paddingBottom="@dimen/px_10"
        >
        <TextView 
            android:id="@+id/ibalance_name"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textColor="@android:color/white"
    		android:textSize="@dimen/app_text_size_best"
            />
        <TextView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/balance_text2"
    		android:textColor="@android:color/white"
    		android:textSize="@dimen/app_text_size_first"
    		android:layout_toRightOf="@id/ibalance_name"
            />
        <TextView 
            android:id="@+id/ibalance_send"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_below="@id/ibalance_name"
    		android:text="@string/balance_text3"
    		android:textSize="@dimen/app_text_size_first"
            />
        <TextView 
            android:id="@+id/ibalance_time"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_below="@id/ibalance_send"
    		android:text="@string/balance_text4"
    		android:textColor="@android:color/white"
    		android:textSize="@dimen/app_text_size_second"
            />
    </RelativeLayout>

</RelativeLayout>
