<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/background"
    >
    <include 
        layout="@layout/fragment_header"
        />
    <TextView 
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="22dp"
        android:text="@string/order_finish_txt"
        android:textColor="@color/TextColorBLACK_NORMAL"
        android:textSize="@dimen/app_text_size_first"
        />
    <TextView 
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/order_song_prompt"
        android:textColor="@color/gray_bg_dashed"
        android:textSize="@dimen/app_text_size_min"
        />

      <TextView 
        android:id="@+id/order_go_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="22dp"
        android:text="@string/order_go_detail"
        android:textSize="@dimen/app_text_size_first"
        android:background="@drawable/shop_car_delete"
        />

</LinearLayout>
