<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/background"
    >
    <include 
        android:id="@+id/mybalance_header"
        layout="@layout/fragment_header"
        />
    <TextView 
        android:id="@+id/mybalance_text"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:text="@string/pcenter_balance"
    	android:textColor="@color/color_33"
    	android:textSize="@dimen/app_text_size_first"
    	android:layout_below="@id/mybalance_header"
    	android:padding="@dimen/px_20"
        />
    <TextView 
        android:id="@+id/mybalance_price"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:text="@string/balance_text1"
    	android:textColor="@color/color_balance_red"
    	android:textSize="@dimen/app_text_size_first"
    	android:layout_below="@id/mybalance_header"
    	android:layout_toRightOf="@id/mybalance_text"
    	android:padding="@dimen/px_20"
        />
    <View 
        android:id="@+id/mybalance_line"
        android:layout_width="match_parent"
    	android:layout_height="1dp" 
    	android:background="@color/color_be"
    	android:layout_marginTop="@dimen/px_10"
    	android:layout_marginBottom="@dimen/px_15"
    	android:layout_below="@id/mybalance_price"
        />
    <com.techfly.liutaitai.util.view.XListView 
        android:id="@+id/mybalance_list"
        android:layout_width="match_parent"
    	android:layout_height="match_parent" 
    	android:layout_below="@id/mybalance_line"
    	android:dividerHeight="@dimen/px_20"
    	android:divider="@null"
        />
    <TextView 
        android:id="@+id/mybalance_no_content"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:text="@string/balance_no_content"
    	android:textColor="@color/color_33"
    	android:textSize="@dimen/app_text_size_first"
    	android:layout_centerInParent="true"
    	android:visibility="gone"
        />

</RelativeLayout>
