<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/px_25"
    >

    <TextView
        android:id="@+id/dtf_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/px_30"
        android:text="@string/dialog_tech_finish_text"
        android:textColor="@color/color_22"
        android:textSize="@dimen/app_text_size_first" />

    <Button
        android:id="@+id/finish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/px_15"
        android:background="@drawable/login_button_blue"
        android:paddingBottom="@dimen/px_15"
        android:paddingLeft="@dimen/px_60"
        android:paddingRight="@dimen/px_60"
        android:paddingTop="@dimen/px_15"
        android:text="@string/life_helper_camera_photo"
        android:textColor="@android:color/white"
        android:textSize="@dimen/app_text_size_first" />
    <ImageView 
        android:id="@+id/finish_img"
        android:layout_width="@dimen/px_250"
        android:layout_height="@dimen/px_250"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:layout_marginBottom="@dimen/px_15"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/finish_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_button_white"
        android:paddingBottom="@dimen/px_15"
        android:paddingLeft="@dimen/px_60"
        android:paddingRight="@dimen/px_60"
        android:paddingTop="@dimen/px_15"
        android:text="@string/life_helper_image_photo"
        android:textColor="@color/color_register"
        android:textSize="@dimen/app_text_size_first" />

</LinearLayout>